# economic_system

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
economic_system/: agent_industry.py  agent_worker.py  model.py  server.py
notebooks/: distributions.ipynb
