[tool.poetry]
name = "economic_system"
version = "0.1.0"
description = "Economic system model"
authors = ["Aiara Lobo Gomes <aiaragomes@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
Mesa = "^0.8.8"
matplotlib = "^3.3.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
